Fix checkbox and radio visibility (#477)
* Fix checkbox and radio visibility

* Update forms.css

--- a/.dev/assets/shared/css/config/mixins.css
+++ b/.dev/assets/shared/css/config/mixins.css
@@ -81,7 +81,7 @@
 	display: block;
 	height: 19px;
 	left: 0;
-	mask-position: left bottom;
+	mask-position: center center;
 	mask-repeat: no-repeat;
 	position: absolute;
 	width: 20px;
